--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
+  <script src="index.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -55,3 +56,6 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+  
+  </body>
+</html>
